frontend/src/assets/TicTacToe/css/ticTacToeStyle.css
/* body {
    font: 14px "Century Gothic", Futura, sans-serif;
    margin: 20px;
  } */

html, body, #root, .App {
    height: 98%;
}

article {
    display: flex;
    flex-direction: column;
    height: 100%;
}

#main-header-container {
    flex: 10%;
}

.game {
    display: flex;
    flex-direction: column;
    align-content: center;
    justify-content: center;
    overflow: hidden;
    flex: 70%;
}

.game.reduced {
    flex: 60%;
}

.game-board {
    margin: auto;
}

.game-board > .game-row::after {
    clear: both;
    display: table;
    content: "";
}

.game-square {
    background: #fff;
    border: 1px solid #999;
    float: left;
    font-size: 5em;
    font-weight: bold;
    line-height: 34px;
    height: 10rem;
    width: 10rem;
    margin-right: -1px;
    margin-top: -1px;
    padding: 0;
    text-align: center;
}

.game-square.reduced {
    font-size: 1.8em;
    height: 6rem;
    width: 6rem;
}

.game-square.draw {
    background-color: red;
}

.game-square:hover {
    background-color: #FFFF00CC;
}

.game-square.highlighted {
    background-color: green;
}

#chat-collapse {
    flex: 20%;
    height: 100%;
}

#chat-collapse.expanded {
    flex: 30%;
    height: 100%;
}

#chat-collapse .MuiCollapse-wrapper {
    height: 100%;
}

#chat-container {
    display: flex;
    flex-direction: column;
    height: 100%;
}

#chat {
    margin: 0;
    overflow: auto;
    font-size: medium;
    flex: 85%;
}

#chat-other-player-typing-container span {
    font-style: italic;
    font-weight: normal;
    font-size: medium;
    line-height: 0;
}

@keyframes ellipse-bold {
    0% {font-weight: normal; font-size: medium}
    10% {font-weight: normal; font-size: medium}
    20% {font-weight: normal; font-size: medium}
    30% {font-weight: bold; font-size: x-large}
    40% {font-weight: bold; font-size: x-large}
    50% {font-weight: bold; font-size: x-large}
    60% {font-weight: bold; font-size: x-large}
    70% {font-weight: bold; font-size: x-large}
    80% {font-weight: normal; font-size: medium}
    90% {font-weight: normal; font-size: medium}
    100% {font-weight: normal; font-size: medium}
}

.chat-other-player-typing-ellipse {
    animation-name: ellipse-bold;
    animation-duration: calc(var(--animation-order) * 1.2s);
    animation-direction: alternate-reverse;
    animation-iteration-count: infinite;
    animation-timing-function: ease-out;
}

#chat-other-player-typing-ellipse-1 {
    --animation-order: 1;
}

#chat-other-player-typing-ellipse-2 {
    --animation-order: 2;
}

#chat-other-player-typing-ellipse-3 {
    --animation-order: 3;
}

#chat-other-player-typing-container {
    flex: 5%;
    width: 100%;
    font-weight: bold;
}

#chat-message-field-container {
    flex: 5%;
    width: 100%;
    display: flex;
}

#chat-sound-credits-container {
    font-size: small;
    flex: 5%;
}

#chat-message-field-input {
    flex: 95%;
    border-radius: 0.25rem;
}

#chat-message-field-submit-btn {
    flex: 5%;
}

@media only screen and (max-width: 960px) {
    .game-square {
        height: 8rem;
        width: 8rem;
    }
}

@media only screen and (max-width: 800px) {
    .game-square {
        font-size: 4em;
        height: 7rem;
        width: 7rem;
    }

    #chat-collapse.expanded {
        flex: 60%;
    }

    #chat-sound-credits-container {
        flex: 5%;
    }
}

@media screen and (max-width: 540px) {
    .game.reduced {
        flex: 30%;
    }

    .game-square {
        height: 6rem;
        width: 6rem;
    }

    .game-square.reduced {
        font-size: 1.8em;
        height: 2rem;
        width: 2rem;
    }

    #chat {
        font-size: small;
    }

    #chat-collapse.expanded {
        flex: 50%;
    }

    #chat-sound-credits-container {
        font-size: smaller;
    }

    #chat-sound-credits-container {
        flex: 15%;
    }
}

